Updated the WordPress script installer to version 4.4.1, Moodle to 3.0.2 and 2.9.4, Drupal to 8.0.4, 7.43 and 6.38, eGroupware to 14.3.20160113, TikiWiki to 14.2, 12.6 and 6.15, IONcube to 5.0.23, Pydio to 6.2.2, Node.JS to 5.7.0, Magento to 1.9.2.4, Rails to 4.2.5.1, phpMyAdmin to 4.5.5.1, 4.4.15.5 and 4.0.10.15, ownCloud to 8.2.2, 7.0.12 and 6.0.9, Wordpress to 4.4.2, Dolibarr to 3.5.8, Piwik to 2.16.0, FengOffice to 3.4.0.17, LimeSurvey to 2.50, FosWiki to 2.1.0, IONcube to 5.1.1, phpMyFAQ to 2.8.26, PHPcalendar to 2.0.9, Django to 1.9.2, Joomla to 3.4.8, and Typo3 to 6.2.19.
Added support for multiple hostnames and automatic renewal of Let's Encrypt certificates.
---- Changes since 5.01 ----
Updated the Rails script installer to version 4.2.5.2, Drupal to 8.1.0, Django to 1.9.5, Revive AdServer to 3.2.4, FengOffice to 3.4.1, Dolibarr to 3.9.0, Moodle to 3.0.3 and 2.9.5, ZenPhoto to 1.4.12, ownCloud to 7.0.13 and 9.0.1, phpMyAdmin to 4.6.0, Joomla to 3.5.1, Pydio to 6.4.1, Piwik to 2.16.1, phpMyFAQ to 2.8.27, Wordpress to 4.5, WHMCS to 6.3.1, Roundcube to 1.1.5, and Node.JS to 5.10.1.
Added a new script installer for Rainloop version 1.9.4.415.
Added the generate-letsencrypt-cert API command, to request and install a cert from Let's Encrypt.
Fixed support for mail server settings autodiscovery for Outlook clients.
Added a Virtualmin Configuration setting to request a Let's Encrypt certificate at virtual server creation time.
Improved support for Ubuntu 16 and MySQL 5.7.
---- Changes since 5.02 ----
Updated the Dolibarr script installer to version 3.9.1, and Wordpress to version 4.5.1.
---- Changes since 5.03 ----
Updated the Django script installer to version 1.9.6, FengOffice to 3.4.2, Roundcube to 1.2.0, phpMyAdmin to 4.6.2 and 4.4.15.6, MediaWiki to 1.26.3, Rainloop to 1.10.1.123, Drupal to 8.1.2, and Typo3 to 6.2.23.
SSL versions 2 and 3 and TLS versions 1.0 and 1.0 are disabled by default in the Apache configuration for new domains.