@@ -5864,10 +5864,12 @@ wizard_title_mysql=MySQL password
 wizard_mysql=To prevent other users on your system from managing the MySQL database, a password for the <tt>root</tt> user should be set.
 wizard_mysql2=Currently the MySQL password is not set, which is highly insecure.
 wizard_mysql3=This has already been done, so changing the password here is not mandatory.
+wizard_mysql4=Virtualmin does not not know what the current MySQL <tt>root</tt> password is. It must be set here to allow Virtualmin to create new MySQL databases and users.
 wizard_mysql_pass=Change MySQL password
 wizard_mysql_pass1=Leave un-changed
 wizard_mysql_pass0=Set to
 wizard_mysql_empty=Set MySQL password
+wizard_mysql_epass=Incorrect MySQL password
 wizard_title_mysize=MySQL database size
 wizard_mysize=MySQL can be configured to trade off memory use for performance, depending on how much RAM your system has and how heavily you expect the database to be used.
 wizard_mysize_type=MySQL configuration size
