@@ -1523,3 +1523,4 @@ Updated the Dolibarr script installer to version 3.9.1, and Wordpress to version
 ---- Changes since 5.03 ----
 Updated the Django script installer to version 1.9.6, FengOffice to 3.4.2, Roundcube to 1.2.0, phpMyAdmin to 4.6.2 and 4.4.15.6, MediaWiki to 1.26.3, Rainloop to 1.10.1.123, Drupal to 8.1.2, and Typo3 to 6.2.23.
 SSL versions 2 and 3 and TLS versions 1.0 and 1.0 are disabled by default in the Apache configuration for new domains.
+In the post-installation wizard, if Virtualmin does not know the current MySQL pasword the admin will be prompted to enter it.
